# mac-cua

./: .gitignore  .mcp.json  LICENSE  README.md  main.py  pyproject.toml
app/: response.py  server.py  session.py
app/_lib/: accessibility.py  action_verification.py  analytics.py  apps.py  confirmed_verification.py  delivery_tap.py  elicitation.py  errors.py  event_tap.py  flags.py  focus.py  graphs.py  input.py  keys.py  lifecycle.py  markdown_writer.py  observer.py  pruning.py  refetchable_tree.py  retry.py  safety.py  screen_capture.py  screenshot.py  selection.py  skylight.py  tracing.py  tree.py  virtual_cursor.py
app/guidance/: com.apple.Music.md
docs/superpowers/plans/: 2026-04-20-confirmed-delivery-pipeline.md
docs/superpowers/specs/: 2026-04-20-confirmed-delivery-pipeline-design.md
specs/: tool-dump-condensed.md  tool-dump.md  tool-overview.md
tests/: test_accessibility.py  test_action_verification.py  test_analytics.py  test_confirmed_verification.py  test_delivery_pipeline.py  test_delivery_tap.py  test_elicitation.py  test_feature_flags.py  test_input.py  test_keys_modifiers.py  test_lifecycle.py  test_pipeline.py  test_pruning.py  test_safety.py  test_screenshot.py  test_session.py  test_skylight.py  test_tree.py  test_tree_cache.py  test_virtual_cursor.py
